@@ -1,6 +1,6 @@
 Package: umx
 Version: 2.8.0
-Date: 2018-05-10
+Date: 2018-06-20
 Title: Structural Equation and Twin Modeling in R
 Authors@R: c(person("Timothy C", "Bates", role = c("aut", "cre"),
     email = "timothy.c.bates@gmail.com", comment = c(ORCID = "0000-0002-1153-9007")))
