@@ -29,11 +29,11 @@ umx_cell_is_on(r = 3, c = 3, "upper")
 umx_cell_is_on(r = 3, c = 3, "diag")
 umx_cell_is_on(r = 2, c = 3, "diag")
 umx_cell_is_on(r = 3, c = 3, "any")
-umx_cell_is_on(r = 3, c = 3, "left")
+a_cp = umxMatrix("a_cp", "Lower", 3, 3, free = TRUE, values = 1:6)
+umx_cell_is_on(r = 3, c = 3, "left", mat = a_cp)
 \dontrun{
 # test stopping
-a_cp_matrix = umxMatrix("a_cp", "Lower", 3, 3, free = TRUE, values = 1:6)
-umx_cell_is_on(r=4,c = 3, "any", mat = a_cp_matrix)
+umx_cell_is_on(r=4,c = 3, "any", mat = a_cp)
 }
 }
 \references{
